# dbt-airflow-template

./: .cursorrules  .gitignore  CHUNK_MODE_CONFIG_EXAMPLE.py  CODE_REVIEW_SUMMARY.md  DATA_INTEGRITY_FIX_SUMMARY.md  HANGUL_TABLE_NAME_FIX.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PIPELINE_ARCHITECTURE_FIX.md  PROCESS_MONITORING_FIX.md  PSQL_COPY_DEBUGGING_FIX.md  README.md  README_CHUNK_ENGINE.md  README_IMPLEMENTATION_SUMMARY.md  README_REFACTORING.md  README_XMIN_FEATURE.md  REFACTORING_PLAN.md  STAGING_TABLE_IMPLEMENTATION_SUMMARY.md  STAGING_TABLE_MIGRATION_COMPLETE.md  data_copy_engine_chunk.py  how --name-status 31570d3  neline -5  performance_test.py  pyproject.toml  run_api.py  simple_api.py  simple_test.py  staging_table_migration_plan.md  tatus  test_api.py  test_chunk_engine.py  test_data_copy_engine.py  test_improved_chunk_engine.py  test_staging_table_engine.py  test_xmin_functionality.py  worker_test.py  xmin_increase.md  xmin_modify_plan.md
.cursor/rules/: airflow-cosmos-integration.mdc  airflow-log-analysis.mdc  dbt-cosmos-project-structure.mdc  dbt-execution-environment.mdc  dbt-tag-based-selection.mdc
airflow/api/: __init__.py  config.py  dependencies.py  main.py
airflow/api/models/: __init__.py  responses.py
airflow/dags/: README.md  README_DATA_TRANSFORMATIONS.md  __init__.py  cosmos_dbt_dag.py  cosmos_dbt_docs_dag.py  data_copy_dag.py  dbt_processing_dag.py  digitalocean_data_copy_dag.py  example_dbt_dag.py  hybrid_data_copy_dag.py  main_orchestration_dag.py  postgres_data_copy_dag.py  postgres_data_copy_dag_refactored.py  postgres_data_copy_dag_refactored2.py  postgres_data_copy_dag_refactored_edi.py  simple_postgres_copy_dag.py  variable_setup_dag.py
airflow/dbt/: .user.yml  README.md  dbt_project.yml  install_dbt.sh  profiles.yml
docker/: Dockerfile  docker-compose.yml  nginx.conf  requirements.txt
docs/: API_REFERENCE.md  ARCHITECTURE.md  DIGITALOCEAN_SETUP_GUIDE.md  TUTORIAL.md  example-workflow.md  postgres_provider_usage.md  postgres_setup_guide.md  server_to_server_copy_performance.md
(+41 files in other folders)
