[project]
name = "dbt-airflow-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
   "apache-airflow>=2.10.3",
   "dbt-core>=1.8.9",
   "dbt-postgres>=1.8.2",
   "astronomer-cosmos>=1.7.1",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []